--- a/NLU/NLU_Task.ipynb
+++ b/NLU/NLU_Task.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
