--- a/NLU/NLU_Task.ipynb
+++ b/NLU/NLU_Task.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib as plot"
    ]
   },
   {
